# smartpapercheck-chatbot

./: .gitignore  README.md  docker-compose.yml  schema.sql  start.bat
.claude/skills/: README.md
.claude/skills/brevo-email/: SKILL.md
.claude/skills/ci-cd-pipeline/: SKILL.md
.claude/skills/claude-ai-integration/: SKILL.md
.claude/skills/docker-devops/: SKILL.md
.claude/skills/fastapi-backend/: SKILL.md
.claude/skills/frontend-development/: SKILL.md
.claude/skills/frontend-review/: SKILL.md
.claude/skills/postgresql-database/: SKILL.md
.claude/skills/project-architecture/: SKILL.md
.claude/skills/rag-retrieval/: SKILL.md
.claude/skills/webapp-testing/: SKILL.md
backend/: .env.example  README.md  agent.py  alembic.ini  chunker.py  config.py  db.py  email_service.py  embedder.py  main.py  models.py  pyproject.toml  scraper.py
backend/alembic/: env.py
backend/alembic/versions/: acd5bfcf0364_create_conversations_and_messages.py
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: conversation.py  message.py
frontend/src/: App.css  App.jsx
frontend/src/api/: client.js
frontend/src/components/: Dashboard.jsx  LeadTable.jsx  MessageBubble.jsx  ScrapeForm.jsx  TypingIndicator.jsx
frontend/src/hooks/: useLeads.js
support-chatbot/backend/: agent.py  config.py  email_service.py  embedder.py  requirements.txt
support-chatbot/frontend/src/: index.css
support-chatbot/frontend/src/components/: ChatWidget.jsx
support-chatbot/frontend/src/hooks/: useChat.js
